--- a/biblioteca/templates/biblioteca/lista_modelos.html
+++ b/biblioteca/templates/biblioteca/lista_modelos.html
@@ -16,6 +16,20 @@
   {% if modelos %}
     <div class="row g-4">
       {% for modelo in modelos %}
+      <div class="d-flex justify-content-between mt-3">
+  <a href="{{ modelo.url_archivo }}" target="_blank" class="btn btn-outline-primary btn-sm">
+    Ver archivo 3D
+  </a>
+  <div>
+    <a href="{% url 'editar_modelo' modelo.pk %}" class="btn btn-outline-secondary btn-sm">
+      Editar
+    </a>
+    <a href="{% url 'eliminar_modelo' modelo.pk %}" class="btn btn-outline-danger btn-sm">
+      Eliminar
+    </a>
+  </div>
+</div>
+
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
@@ -41,4 +55,5 @@
     <p>No hay modelos registrados todavía.</p>
   {% endif %}
 </div>
+
 {% endblock %}
